--- a/backend/src/main/webapp/app/views/register/add.html
+++ b/backend/src/main/webapp/app/views/register/add.html
@@ -270,7 +270,7 @@
 				</div>
 				<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.conEmail.$invalid}">
 					<label class="control-label">Email</label>
-					<input tabindex="14" name="conEmail" type="email" class="form-control" ng-model="data.conEmail">
+					<input tabindex="14" name="conEmail" type="email" class="form-control" ng-model="data.conEmail" required>
 				</div>
 				<div class="form-group col-lg-2">
 					<label class="control-label">Line ID</label>
