--- a/backend/src/main/webapp/app/views/product/main.html
+++ b/backend/src/main/webapp/app/views/product/main.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header">{{'employer.header_title' | translate}}</h1>
+			<h1 class="page-header">โปรดักส์</h1>
 		</div>
 	</div>
 	
