--- a/backend/src/main/webapp/app/views/product/search.html
+++ b/backend/src/main/webapp/app/views/product/search.html
@@ -1,31 +1,22 @@
 
 <div class="col-lg-12">
 	<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
-		<form class="form-inline">
+		<form class="form-inline" ng-submit="search()">
 		  <div class="form-group input-group">
 		    <span class="input-group-addon"><i class="fa fa-search"></i></span>
-		    <input type="text" class="form-control" placeholder="{{'user.search.username_show_hint' | translate}}" ng-model="$parent.formData.userNameShow" ng-keyup="search()">
-		  </div>
-		  <div class="form-group">
-		    <input type="text" class="form-control" placeholder="{{'user.search.username_hint' | translate}}" ng-model="$parent.formData.userName" ng-keyup="search()">
-		  </div>
-		  <div class="form-group">
-			<select name="roles" class="form-control" ng-model="$parent.formData.role" ng-change="search()">
-				<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
-			    <option ng-selected="{{ $parent.formData.role == option.authority }}"
-			    		ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
-			</select>
+		    <input type="text" class="form-control" placeholder="ชื่อโปรดักส์" ng-model="$parent.formData.productName">
 		  </div>
 		  <div class="form-group">
                 <label style="margin-left: 20px;">{{'user.addpage.status' | translate}} &nbsp;&nbsp;</label>
                 <label class="radio-inline">
-                    <input type="radio" name="userStatus" value="1" ng-model="$parent.formData.status" ng-change="search()">{{'user.addpage.status.enable' | translate}}
+                    <input type="radio" name="userStatus" value="1" ng-model="$parent.formData.enabled">{{'user.addpage.status.enable' | translate}}
                 </label>
                 <label class="radio-inline">
-                    <input type="radio" name="userStatus" value="0" ng-model="$parent.formData.status" ng-change="search()">{{'user.addpage.status.disable' | translate}}
+                    <input type="radio" name="userStatus" value="0" ng-model="$parent.formData.enabled">{{'user.addpage.status.disable' | translate}}
                 </label>
 		   </div>
 		   <button style="margin-left: 20px;" type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
+		   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 		</form>
 	</div>
 </div>
@@ -55,25 +46,21 @@
 			<thead>
 				<tr>
 					<th>#</th>
-					<th>{{'user.table.header.username_show' | translate}}</th>
-					<th>{{'user.table.header.username' | translate}}</th>
-					<th>{{'user.table.header.role' | translate}}</th>
+					<th>ชื่อโปรดักส์</th>
 					<th>{{'user.table.header.status' | translate}}</th>
 					<th>{{'user.table.header.created_date' | translate}}</th>
 					<th></th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr ng-repeat="u in data.users track by $index">
+				<tr ng-repeat="u in data.products track by $index">
 					<td>{{ $index + 1 + ((formData.currentPage - 1) * itemsPerPage) }}</td>
-					<td>{{ u.userNameShow }}</td>
-					<td>{{ u.userName }}</td>
-					<td>{{ u.roles[0].name }}</td>
+					<td>{{ u.productName }}</td>
 					<td>
 						<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="u.enabled"></i>
 						<i class="fa  fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="u.enabled"></i>
 					</td>
-					<td>{{ u.createdDateTime | date : 'dd-MM-yyyy'}}</td>
+					<td>{{ u.createdDateTime | date : 'dd-MM-yyyy hh:mm:ss'}}</td>
 					<td>
 						<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteUser(u.id)"></i>&emsp;
 						<i class="fa fa-edit fa-lg user-action-icon-primary" ng-click="editUser(u)"></i>
