--- a/backend/src/main/webapp/app/views/user/search.html
+++ b/backend/src/main/webapp/app/views/user/search.html
@@ -1,7 +1,7 @@
 
 <div class="col-lg-12">
 	<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
-		<form class="form-inline">
+		<form class="form-inline" ng-submit="search()">
 		  <div class="form-group input-group">
 		    <span class="input-group-addon"><i class="fa fa-search"></i></span>
 		    <input type="text" class="form-control" placeholder="{{'user.search.username_show_hint' | translate}}" ng-model="$parent.formData.userNameShow">
@@ -26,7 +26,7 @@
                 </label>
 		   </div>
 		   <button style="margin-left: 20px;" type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
-		   <button type="button" class="btn btn-outline btn-primary" ng-click="search()">ค้นหา</button>
+		   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 		</form>
 	</div>
 </div>
