--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -34,24 +34,19 @@
 			</div>
 			<div class="form-group" ng-class="{'has-error':addUserForm.roles.$invalid}">
 				<label class="control-label">{{'user.addpage.role' | translate}} *</label>
-				<select name="roles" class="form-control" ng-model="user.authorities[0].authority" required>
+				<select name="roles" class="form-control" ng-model="user.authorities[0].authority" ng-change="authoritySelected()" required>
 					<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
 			      	<option ng-selected="{{ user.authorities[0].authority == option.authority }}" 
 			      			ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
 			    </select>
 			</div>
-			
-			
-			
-			<div class="form-group">
-				<select name="multipleSelect" id="multipleSelect" class="form-control" ng-model="user.products" multiple>
-					<option value="option-1">Option 1</option>
-			      	<option value="option-2">Option 2</option>
-			      	<option value="option-3">Option 3</option>
+			<div class="form-group" ng-class="{'has-error':addUserForm.products.$invalid}">
+				<label class="control-label">โปรดักส์ *</label>
+				<select name="products" class="form-control" ng-model="user.products" size="10" multiple 
+						ng-disabled="!isShowProducts" ng-required="isShowProducts"
+						ng-options="option.id as option.productName for option in productsSelect">
 			    </select>
 		    </div>
-			
-			
 			<div class="form-group">
                  <label>{{'user.addpage.status' | translate}} &nbsp;&nbsp;</label>
                  <label class="radio-inline">
