--- a/backend/src/main/webapp/app/views/user/search.html
+++ b/backend/src/main/webapp/app/views/user/search.html
@@ -10,12 +10,18 @@
 		    <input type="text" class="form-control" placeholder="{{'user.search.username_hint' | translate}}" ng-model="$parent.formData.userName">
 		  </div>
 		  <div class="form-group">
+			<select name="products" class="form-control" ng-model="$parent.formData.product" ng-options="option.id as option.productName for option in productsSelect">
+				<option value="">---เลือกโปรดักส์---</option>
+		  	</select>
+		  </div>
+		  <div class="form-group">
 			<select name="roles" class="form-control" ng-model="$parent.formData.role">
 				<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
 			    <option ng-selected="{{ $parent.formData.role == option.authority }}"
 			    		ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
 			</select>
 		  </div>
+		  
 		  <div class="form-group">
                 <label style="margin-left: 20px;">{{'user.addpage.status' | translate}} &nbsp;&nbsp;</label>
                 <label class="radio-inline">
