--- a/backend/src/main/webapp/app/views/newtask/main.html
+++ b/backend/src/main/webapp/app/views/newtask/main.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header">{{'profile.header_title' | translate}}</h1>
+			<h1 class="page-header">Import Finger Scan File</h1>
 		</div>
 	</div>
 	
@@ -9,49 +9,125 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <i class="fa fa-user fa-fw"></i> {{'profile.header_panel' | translate}}
+                    <i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูลการ Import
                 </div>
                 <div class="panel-body">
+                	
+					 <div class="col-lg-12">
+					 	<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
+
+	                    	<!-- <h3>Upload queue</h3>
+		                    <p>Queue length: {{ uploader.queue.length }}</p> -->
+		
+		                    <table class="table">
+		                        <thead>
+		                            <tr>
+		                                <th width="50%">Name</th>
+		                                <th ng-show="uploader.isHTML5">Size</th>
+		                                <th ng-show="uploader.isHTML5">Progress</th>
+		                                <th>Status</th>
+		                                <th>Actions</th>
+		                            </tr>
+		                        </thead>
+		                        <tbody>
+		                            <tr ng-repeat="item in uploader.queue">
+		                                <td><strong>{{ item.file.name }}</strong></td>
+		                                <td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB</td>
+		                                <td ng-show="uploader.isHTML5">
+		                                    <div class="progress" style="margin-bottom: 0;">
+		                                        <div class="progress-bar" role="progressbar" ng-style="{ 'width': item.progress + '%' }"></div>
+		                                    </div>
+		                                </td>
+		                                <td class="text-center">
+		                                    <span ng-show="item.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
+		                                    <span ng-show="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
+		                                    <span ng-show="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
+		                                </td>
+		                                <td nowrap>
+		                                    <button type="button" class="btn btn-success btn-xs" ng-click="item.upload()" ng-disabled="item.isReady || item.isUploading || item.isSuccess">
+		                                        <span class="glyphicon glyphicon-upload"></span> Upload
+		                                    </button>
+		                                    <!-- <button type="button" class="btn btn-warning btn-xs" ng-click="item.cancel()" ng-disabled="!item.isUploading">
+		                                        <span class="glyphicon glyphicon-ban-circle"></span> Cancel
+		                                    </button> -->
+		                                    <button type="button" class="btn btn-danger btn-xs" ng-click="item.remove()">
+		                                        <span class="glyphicon glyphicon-trash"></span> Remove
+		                                    </button>
+		                                </td>
+		                            </tr>
+		                        </tbody>
+		                    </table>
+		                    <div>
+		                        <div>
+		                            Queue progress:
+		                            <div class="progress" style="">
+		                                <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader.progress + '%' }"></div>
+		                            </div>
+		                        </div>
+		                        <div class="row">
+			                        <div class="col-lg-9">
+				                        <button type="button" class="btn btn-success btn-s" ng-click="uploader.uploadAll()" ng-disabled="!uploader.getNotUploadedItems().length">
+				                            <span class="glyphicon glyphicon-upload"></span> Upload all
+				                        </button>
+				                        <!-- <button type="button" class="btn btn-warning btn-s" ng-click="uploader.cancelAll()" ng-disabled="!uploader.isUploading">
+				                            <span class="glyphicon glyphicon-ban-circle"></span> Cancel all
+				                        </button> -->
+				                        <button type="button" class="btn btn-danger btn-s" ng-click="uploader.clearQueue()" ng-disabled="!uploader.queue.length">
+				                            <span class="glyphicon glyphicon-trash"></span> Remove all
+				                        </button>
+			                        </div>
+			                        <div class="col-lg-3">
+				                        <input type="file" nv-file-select="" uploader="uploader" multiple  />	  
+			                        </div>
+		                        </div>
+		                    </div>
+						</div>
+	                </div>
 					
-					<div>
-						<div class="col-lg-6">
-							<form role="form" name="profileForm" ng-submit="updateProfile()">
-								<div class="form-inline" style="text-align: center;">
-									<label class="bg-success profile-label">{{'profile.role' | translate}} <i class="fa fa-caret-right fa-fw"></i> {{ data.role }}</label>
-								</div>
-								<div class="form-group" ng-class="{'has-error': profileForm.userNameShow.$invalid  || existingUserShowErrMsg}">
-									<label class="control-label">{{'profile.username_show' | translate}} *</label>
-									<span class="text-danger" ng-show="existingUserShowErrMsg" style="position: absolute; right: 0px;">
-										<i class='fa fa-warning fa-fw'></i><em>{{ existingUserShowErrMsg }}</em>
-									</span>
-									<input name="userNameShow" class="form-control" ng-model="data.usernameShow" ng-change="existingUserShowErrMsg = null" required>
-								</div>
-								<div class="form-group" ng-class="{'has-error': profileForm.userName.$invalid  || existingUserErrMsg}">
-									<label class="control-label">{{'profile.username' | translate}} *</label>
-									<span class="text-danger" ng-show="existingUserErrMsg" style="position: absolute; right: 0px;">
-										<i class='fa fa-warning fa-fw'></i><em>{{ existingUserErrMsg }}</em>
-									</span>
-									<input name="userName" class="form-control" ng-model="data.username" ng-change="existingUserErrMsg = null" required>
-								</div>
-								<div class="form-group">
-									<label class="control-label">{{'profile.new_password' | translate}}</label> 
-									<input class="form-control" type="password" ng-model="data.password">
-								</div>
-								<div class="form-group" ng-class="{'has-error':notMatchRepassErrMsg}">
-									<label class="control-label">{{'profile.re_type_new_password' | translate}}</label> 
-									<span class="text-danger" ng-show="notMatchRepassErrMsg" style="position: absolute; right: 0px;">
-										<i class='fa fa-warning fa-fw'></i><em>{{ notMatchRepassErrMsg }}</em>
-									</span>
-									<input class="form-control" type="password" ng-model="data.reTypePassword" ng-change="notMatchRepassErrMsg = null">
-								</div>
-								<div style="text-align: center;">
-									<button ng-disabled="profileForm.$invalid" type="submit" class="btn btn-outline btn-primary btn-lg">{{'profile.update_btn' | translate}}</button>
-								</div>
-							</form>
+					
+					<div class="col-lg-12">
+						<div class="form-group input-group well well-sm" style="padding-top: 3px; padding-bottom: 3px;">
+							<span class="input-group-addon" style="border: 0px; background: none;">
+								{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{numPages}} ({{'pagination.total' | translate}} {{ totalItems }} {{'pagination.items' | translate}})
+							</span>
+							<pagination ng-change="pageChanged()" total-items="totalItems"
+										first-text="{{'pagination.first' | translate}}"
+										previous-text="{{'pagination.previous' | translate}}"
+										next-text="{{'pagination.next' | translate}}"
+										last-text="{{'pagination.last' | translate}}"
+										ng-model="formData.currentPage" items-per-page="formData.itemsPerPage"
+										max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
+										rotate="false" num-pages="numPages" style="margin: auto;" />
+							<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none;">
+								<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="formData.itemsPerPage" ng-change="changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
+							</span>
 						</div>
 					</div>
+					<div class="table-responsive col-lg-12">
+						<table class="table table-striped table-hover">
+							<thead>
+								<tr>
+									<th>ลำดับที่</th>
+									<th>ชื่อไฟล์</th>
+									<th>วันที่นำเข้า</th>
+									<th>ตั้งแต่วันที่</th>
+									<th>ถึงวันที่</th>
+								</tr>
+							<thead>
+							<tbody>
+								<tr ng-repeat="data in datas track by $index">
+									<td>{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
+									<td>{{ data.fileName }}</td>
+									<td>{{ data.createdDateTime | date:format }}</td>
+									<td>{{ data.startedDateTime | date:format }}</td>
+									<td>{{ data.endedDateTime | date:format }}</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
 					
-                </div>
+					
+				</div>
                 <div class="panel-footer"></div>
             </div>
         </div>
