--- a/backend/src/main/webapp/app/views/newtask/main.html
+++ b/backend/src/main/webapp/app/views/newtask/main.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header">Import Finger Scan File</h1>
+			<h1 class="page-header">นำเข้างานใหม่</h1>
 		</div>
 	</div>
 	
@@ -9,7 +9,7 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูลการ Import
+                    <i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูลการนำเข้า
                 </div>
                 <div class="panel-body">
                 	
