--- a/backend/src/main/webapp/app/views/newtask/main.html
+++ b/backend/src/main/webapp/app/views/newtask/main.html
@@ -9,7 +9,17 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูลการนำเข้า
+                    <i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูลการนำเข้า&nbsp;
+                    <div class="btn-group" ng-if="authority == 'ROLE_SUPERADMIN'">
+			            <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
+			                <i class="fa fa-chevron-down"></i>
+			            </button>
+			            <ul class="dropdown-menu slidedown">
+			                <li ng-repeat="u in productsSelect">
+			                    <a href="">{{ u.productName }}</a>
+			                </li>
+			            </ul>
+			        </div>
                 </div>
                 <div class="panel-body">
                 	
@@ -107,9 +117,9 @@
 						<table class="table table-striped table-hover">
 							<thead>
 								<tr>
-									<th>ลำดับที่</th>
-									<th>ชื่อไฟล์</th>
-									<th>วันที่นำเข้า</th>
+									<th width="10%">ลำดับที่</th>
+									<th width="40%">ชื่อไฟล์</th>
+									<th width="40%">วันที่นำเข้า</th>
 								</tr>
 							<thead>
 							<tbody>
