--- a/backend/src/main/webapp/app/views/newtask/main.html
+++ b/backend/src/main/webapp/app/views/newtask/main.html
@@ -10,16 +10,17 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <i class="fa fa-list-alt  fa-fw"></i> แสดงข้อมูลการนำเข้า&nbsp;
-                    <div class="btn-group" ng-if="authority == 'ROLE_SUPERADMIN'">
+                    <div class="btn-group pull-right" ng-if="authority == 'ROLE_SUPERADMIN'">
 			            <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-			                <i class="fa fa-chevron-down"></i>
+			            	<i class="fa fa-chevron-down"></i>
 			            </button>
 			            <ul class="dropdown-menu slidedown">
 			                <li ng-repeat="u in productsSelect">
-			                    <a href="">{{ u.productName }}</a>
+			                    <a href="" ng-click="changeProduct(u.id)">{{ u.productName }}</a>
 			                </li>
 			            </ul>
 			        </div>
+			        <span class="pull-right" ng-repeat="u in productsSelect | filter : selectedProduct">{{ u.productName }}&nbsp&nbsp</span>
                 </div>
                 <div class="panel-body">
                 	
