--- a/backend/src/main/webapp/app/views/renewal/main.html
+++ b/backend/src/main/webapp/app/views/renewal/main.html
@@ -81,7 +81,7 @@
 									<td>
 										<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="data.enabled == 1"></i>
 										<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-show="data.enabled == 0"></i>
-										<i class="fa fa-lock fa-lg" ng-show="data.status == 1"></i>
+										<!-- <i class="fa fa-lock fa-lg" ng-show="data.status == 1"></i> -->
 									</td>
 									<td>
 										<i class="fa fa-retweet fa-lg user-action-icon-warning" ng-click="renewPopup(data)"></i>
@@ -201,8 +201,8 @@
             </div>
            	<div class="modal-footer">
 				<button type="button" class="btn btn-default" ng-click="dismissModal()">ปิด</button>
-                <button type="button" class="btn btn-success" ng-show="popup.status == 1" ng-click="updateStatus(0)">ยกเลิกระงับสิทธิ์สมาชิก</button>
-                <button type="button" class="btn btn-danger" ng-show="popup.status == 0" ng-click="updateStatus(1)">ระงับสิทธิ์สมาชิก</button>
+                <button type="button" class="btn btn-success" ng-show="popup.enabled == 0" ng-click="updateStatus(1)">ยกเลิกระงับสิทธิ์สมาชิก</button>
+                <button type="button" class="btn btn-danger" ng-show="popup.enabled == 1" ng-click="updateStatus(0)">ระงับสิทธิ์สมาชิก</button>
                 <button type="button" class="btn btn-primary" ng-disabled="persistForm.$invalid" ng-click="renewRegister(1)">ต่อสมาชิก</button>
                 <button type="button" class="btn btn-primary" ng-disabled="persistForm.$invalid" ng-click="renewRegister(2)">พิมพ์ใบเสร็จ</button>
 			</div>
