--- a/backend/src/main/webapp/app/lib/css/dnd_advanced.css
+++ b/backend/src/main/webapp/app/lib/css/dnd_advanced.css
@@ -85,7 +85,7 @@
  * The dnd-list should always have a min-height,
  * otherwise you can't drop to it once it's empty
  */
-.advancedDemo .dropzone ul[dnd-list] {
+.advancedDemo ul[dnd-list] {
     min-height: 42px;
     margin: 0px;
     padding-left: 0px;
@@ -98,7 +98,7 @@
  * half of the element we are dragging over. In other
  * browsers we can use event.offsetY for this.
  */
-.advancedDemo .dropzone li {
+.advancedDemo li {
     display: block;
 }
 
@@ -107,7 +107,7 @@
  * to see where he is dropping his element, even if the element is huge. The
  * .dndDragging class is automatically set during the drag operation.
  */
-.advancedDemo .dropzone .dndDragging {
+.advancedDemo .dndDragging {
     opacity: 0.7;
 }
 
@@ -116,7 +116,7 @@
  * operation. It makes sense to hide it to give the user the feeling that he's
  * actually moving it. Note that the source element has also .dndDragging class.
  */
-.advancedDemo .dropzone .dndDraggingSource {
+.advancedDemo .dndDraggingSource {
     display: none;
 }
 
@@ -124,7 +124,7 @@
  * An element with .dndPlaceholder class will be added as child of the dnd-list
  * while the user is dragging over it.
  */
-.advancedDemo .dropzone .dndPlaceholder {
+.advancedDemo .dndPlaceholder {
     background-color: #ddd !important;
     min-height: 42px;
     display: block;
@@ -133,11 +133,11 @@
 
 /***************************** Element type specific styles *****************************/
 
-.advancedDemo .dropzone .itemlist {
+.advancedDemo .itemlist {
     min-height: 120px !important;
 }
 
-.advancedDemo .dropzone .itemlist > li {
+.advancedDemo .itemlist > li {
     background-color: #337ab7;
     border: none;
     border-radius: .25em;
@@ -148,9 +148,9 @@
     margin: 5px;
     padding: 3px;
     text-align: center;
-    width: 50px;
+    min-width: 50px;
 }
 
-.advancedDemo .dropzone .container-element {
-    margin: 10px;
+.advancedDemo .container-element {
+    /* margin: 10px; */
 }
