--- a/backend/src/main/webapp/app/views/product/import_conf.html
+++ b/backend/src/main/webapp/app/views/product/import_conf.html
@@ -1,4 +1,4 @@
-	
+
 <div class="advancedDemo col-lg-12">
 	<ul dnd-list="containers"
 	    dnd-allowed-types="['containerType']"
@@ -6,7 +6,6 @@
 	    dnd-dragover="dragoverCallback(event, index, external, type)"
 	    dnd-drop="dropCallback(event, index, item, external, type, 'containerType')">
 	    <li ng-repeat="items in containers"
-	        dnd-draggable="items"
 	        dnd-type="'containerType'"
 	        dnd-effect-allowed="copyMove"
 	        dnd-moved="containers.splice($index, 1)">
@@ -18,8 +17,7 @@
 	                dnd-external-sources="true"
 	                dnd-dragover="dragoverCallback(event, index, external, type)"
 	                dnd-drop="dropCallback(event, index, item, external, type, 'itemType')"
-	                dnd-inserted="logEvent('Element was inserted at position ' + index, event)"
-	                class="itemlist">
+	                dnd-inserted="logEvent('Element was inserted at position ' + index, event)" class="itemlist">
 	                <li ng-repeat="item in items"
 	                    dnd-draggable="item"
 	                    dnd-type="'itemType'"
@@ -28,8 +26,9 @@
 	                    dnd-moved="items.splice($index, 1); logEvent('Item moved', event)"
 	                    dnd-copied="logEvent('Item copied', event)"
 	                    dnd-canceled="logEvent('Drag operation canceled', event)"
-	                    dnd-dragend="logEvent('Drag operation ended', event)">
-	                    {{item.label}}
+	                    dnd-dragend="dndDragend('Drag operation ended', event)">
+	                    
+	                    Col. {{$index + 1}} <br /> <input class="form-control" ng-model="item.columnName" ng-blur="update()">
 	                </li>
 	            </ul>
 	            <div class="clearfix"></div>
@@ -37,6 +36,7 @@
 	    </li>
 	</ul>
 </div>
+
 
 <div class="col-lg-12">
 	<div view-source="advanced"></div>
