--- a/backend/src/main/webapp/app/views/newtask/main.html
+++ b/backend/src/main/webapp/app/views/newtask/main.html
@@ -88,7 +88,7 @@
 				                        </button>
 			                        </div>
 			                        <div class="col-lg-3">
-				                        <input type="file" nv-file-select="" uploader="uploader" multiple  />	  
+				                        <input type="file" nv-file-select="" uploader="uploader" multiple accept="application/vnd.ms-excel" />	  
 			                        </div>
 		                        </div>
 		                    </div>
