--- a/backend/src/main/webapp/app/views/product/import_conf.html
+++ b/backend/src/main/webapp/app/views/product/import_conf.html
@@ -10,47 +10,47 @@
   </style>
   
   
-  
-<div class="advancedDemo col-lg-12">
-	<ul dnd-list="containers"
-	    dnd-allowed-types="['containerType']"
-	    dnd-external-sources="true"
-	    dnd-dragover="dragoverCallback(event, index, external, type)"
-	    dnd-drop="dropCallback(event, index, item, external, type, 'containerType')">
-	    <li ng-repeat="items in containers"
-	        dnd-type="'containerType'"
-	        dnd-effect-allowed="copyMove"
-	        dnd-moved="containers.splice($index, 1)">
-	        <div class="container-element box box-blue">
-	           <!--  <h3>รูปแบบหัวตาราง >> {{ productName }}</h3> -->
-	            <ul dnd-list="items"
-	                dnd-allowed-types="['itemType']"
-	                dnd-horizontal-list="true"
-	                dnd-external-sources="true"
-	                dnd-dragover="dragoverCallback(event, index, external, type)"
-	                dnd-drop="dropCallback(event, index, item, external, type, 'itemType')"
-	                dnd-inserted="logEvent('Element was inserted at position ' + index, event)" class="itemlist">
-	                <li ng-repeat="item in items"
-	                    dnd-draggable="item"
-	                    dnd-type="'itemType'"
-	                    dnd-dragstart="logEvent('Started to drag an item', event)"
-	                    dnd-moved="items.splice($index, 1); logEvent('Item moved', event)"
-	                    dnd-canceled="logEvent('Drag operation canceled', event)"
-	                    dnd-copied="logEvent('Item copied', event)"
-	                    dnd-effect-allowed="copyMove"
-	                    dnd-dragend="dndDragend('Drag operation ended', event)">
-	                    
-	                    <span class="pull-right"><small>Col. {{$index + 1}}</small></span><br /> 
-	                    <span><small>{{ item.columnName }}</small></span><br /> 
-	                    <input class="form-control" ng-model="item.columnName" ng-blur="update()">
-	                </li>
-	            </ul>
-	            <div class="clearfix"></div>
-	        </div>
-	    </li>
-	</ul>
+<div class="row">  
+	<div class="advancedDemo col-lg-12">
+		<ul dnd-list="containers"
+		    dnd-allowed-types="['containerType']"
+		    dnd-external-sources="true"
+		    dnd-dragover="dragoverCallback(event, index, external, type)"
+		    dnd-drop="dropCallback(event, index, item, external, type, 'containerType')">
+		    <li ng-repeat="items in containers"
+		        dnd-type="'containerType'"
+		        dnd-effect-allowed="copyMove"
+		        dnd-moved="containers.splice($index, 1)">
+		        <div class="container-element box box-blue">
+		           <!--  <h3>รูปแบบหัวตาราง >> {{ productName }}</h3> -->
+		            <ul dnd-list="items"
+		                dnd-allowed-types="['itemType']"
+		                dnd-horizontal-list="true"
+		                dnd-external-sources="true"
+		                dnd-dragover="dragoverCallback(event, index, external, type)"
+		                dnd-drop="dropCallback(event, index, item, external, type, 'itemType')"
+		                dnd-inserted="logEvent('Element was inserted at position ' + index, event)" class="itemlist">
+		                <li ng-repeat="item in items"
+		                    dnd-draggable="item"
+		                    dnd-type="'itemType'"
+		                    dnd-dragstart="logEvent('Started to drag an item', event)"
+		                    dnd-moved="items.splice($index, 1); logEvent('Item moved', event)"
+		                    dnd-canceled="logEvent('Drag operation canceled', event)"
+		                    dnd-copied="logEvent('Item copied', event)"
+		                    dnd-effect-allowed="copyMove"
+		                    dnd-dragend="dndDragend('Drag operation ended', event)">
+		                    
+		                    <span class="pull-right"><small>Col. {{$index + 1}}</small></span><br /> 
+		                    <span><small>{{ item.columnName }}</small></span><br /> 
+		                    <input class="form-control" ng-model="item.columnNameAlias" ng-blur="update()">
+		                </li>
+		            </ul>
+		            <div class="clearfix"></div>
+		        </div>
+		    </li>
+		</ul>
+	</div>
 </div>
-
 
 
 
@@ -60,10 +60,10 @@
   <div style="height: 0px;"></div>
  
   <div class="box-padding trashcan" 
-  	   style="background-color: transparent; height: 120px;" sticky anchor="bottom" offset="0">
+  	   style="background-color: transparent; height: 120px; width: 150px;" sticky anchor="bottom" offset="0">
     	<div dnd-list="[]" class="pull-right" 
-    		 style="width: 118px; height: 118px; text-align: center; 
-    		 color: green; border: 1px solid green; padding-top: 20px;
+    		 style="width: 118px; text-align: center; 
+    		 color: green; border: 1px solid green; padding-top: 10px; padding-bottom: 10px;
     		 border-radius: .25em; background-color: #E6931E;">
     		<i class="fa fa-trash-o fa-5x"></i>
     	</div>
