--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -40,18 +40,11 @@
 										<option value="">---กรุณาเลือก---</option>
 								  	</select>
 								  </div>
-								  <button type="submit" class="btn btn-outline btn-primary" ng-disabled="!formData.methodId">ดำเนินการ</button>
+								  <button type="button" ng-click="showCollector()" class="btn btn-outline btn-primary" ng-disabled="!formData.methodId">ถัดไป</button>
 							   </div>
 							</form>
 						</div>
 					</div>
-                
-                
-                
-                
-                
-                
-                
                 
                 
 					<div class="col-lg-12">
@@ -104,3 +97,42 @@
         </div>
     </div>
 </div>
+
+
+
+
+
+<!-- Modal -->
+ <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
+     <div class="modal-dialog">
+         <div class="modal-content">
+         	<div class="modal-header">
+                <button type="button" class="close" ng-click="dismissModal()" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">แสดงรายชื่อผู้รับงาน</h4>
+            </div>
+            <div class="modal-body">            	    	
+            	<div class="row" style="max-height: 480px; overflow-y: scroll; scrollbar-arrow-color:blue; 
+            							scrollbar-face-color: #e7e7e7; scrollbar-3dlight-color: #a0a0a0; 
+            							scrollbar-darkshadow-color:#888888">
+					<div class="col-lg-12">
+						<ul class="list-group">
+						  <li class="list-group-item" ng-repeat="u in users track by $index">
+						    <span class="badge">14</span>
+						    <label style="width:50px; padding-right: 25px; text-align: right;">{{ $index + 1 }}.</label><input type="checkbox" ng-model="u.isSelectUser"> {{ u.username }}
+						  </li>
+						</ul>						
+					</div>
+            	</div>
+            </div>
+           	<div class="modal-footer">
+           		<label class="pull-left"><input type="checkbox" ng-model="isSelectAllUsers" ng-change="selectAllUsersCheckBox()"> เลือกทั้งหมด</label>
+				<button type="button" class="btn btn-default" ng-click="dismissModal()">ปิด</button>
+                <button type="button" class="btn btn-success" ng-show="popup.enabled == 0" ng-click="updateStatus(1)">ยกเลิกระงับสิทธิ์สมาชิก</button>
+                <button type="button" class="btn btn-danger" ng-show="popup.enabled == 1" ng-click="updateStatus(0)">ระงับสิทธิ์สมาชิก</button>
+                <button type="button" class="btn btn-primary" ng-disabled="persistForm.$invalid" ng-click="renewRegister(1)">ต่อสมาชิก</button>
+                <button type="button" class="btn btn-primary" ng-disabled="persistForm.$invalid" ng-click="renewRegister(2)">พิมพ์ใบเสร็จ</button>
+			</div>
+         </div>
+     </div>
+ </div>
+<!-- / Modal -->
