--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -14,6 +14,11 @@
                 <div class="panel-body">
                 
                 	<div class="col-lg-12">
+               	
+		                <div class="well well-sm" style="margin-bottom: 3px;">
+		                    Details 
+		                </div>
+                	
 						<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
 							<form class="form-inline" ng-submit="test()">
 							
