--- a/backend/src/main/webapp/app/styles/common.css
+++ b/backend/src/main/webapp/app/styles/common.css
@@ -22,3 +22,10 @@
 .comm-cursor-pointer {
 	cursor: pointer;
 }
+.comm-row-selected {
+	background-color: #AAB7D1 !important;
+}
+
+.comm-row-selected:hover {
+	background-color: #AABEDE !important;
+}
