--- a/backend/src/main/webapp/app/views/dashboard/main.html
+++ b/backend/src/main/webapp/app/views/dashboard/main.html
@@ -1,4 +1,4 @@
-<div id="wrapper">
+<div id="wrapper" style="margin-bottom: 100px;">
 
         <!-- Navigation -->
             
@@ -14,4 +14,4 @@
                 
             </div>
             <!-- /#page-wrapper -->
-    </div>
+</div>
