--- a/backend/src/main/webapp/app/styles/common.css
+++ b/backend/src/main/webapp/app/styles/common.css
@@ -29,3 +29,6 @@
 .comm-row-selected:hover {
 	background-color: #AABEDE !important;
 }
+.comm-rightclick {
+	background-color: #AAB7D1 !important;
+}
